# task-manager-fastapi

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
src/app/adapters/: stub_db.py
src/app/adapters/sqlalchemy_db/: gateway.py  models.py
src/app/adapters/sqlalchemy_db/migrations/versions/: 20231031-182943_151559514ddc_added_initial_table.py  20231103-121211_91f85918a35f_.py  20231104-142529_1e3191c5e3d4_.py  20231105-143514_f5248b1bb650_.py
src/app/api/: __init__.py  root_router.py  tasks_router.py  users_router.py
src/app/application/: tasks_services.py  users_services.py
src/app/application/protocols/: database.py
src/app/application/schemas/: task_schemas.py  user.py  user_schemas.py
src/app/main/: auth_di.py  di.py
src/task_manager/adapters/: stub_db.py
src/task_manager/adapters/sqlalchemy_db/: gateway.py  models.py
src/task_manager/adapters/sqlalchemy_db/migrations/: env.py
src/task_manager/adapters/sqlalchemy_db/migrations/versions/: 20231105-143514_f5248b1bb650_.py  20231107-183746_b9bf5657dc62_.py  20240504-211516_bf9e382d7074_added_initial_table.py
src/task_manager/api/: depends_stub.py  index_router.py  root_router.py  tasks_router.py  to_do_IoC_tasks_router.py  to_do_IoC_users_router.py  users_router.py
src/task_manager/application/: exceptions.py  tasks_services.py  to_do_create_user.py  users_services.py
src/task_manager/application/protocols/: database.py  to_do_interactor_factory.py
src/task_manager/domain/: models.py
src/task_manager/domain/schemas/: __init__.py
src/task_manager/domain/services/: tasks_services.py  to_do_test_users_services.py  users_services.py
src/task_manager/main/: auth_di.py  config.py  dependencies.py  di.py  di_provider.py  routers.py  to_do_ioc.py  web.py
src/task_manager/main/auth/: users_setup.py
src/task_manager/presentation/api/: root_router.py  tasks_router.py  to_do_IoC_users_router.py  users_router.py
tests/: conftest.py  test_generator.py  test_users_router.py
