[build-system]
requires = ["setuptools>=69.5.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[project]
name = "app"
version = "0.0.1"

description = "FastAPI task manager"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "alembic",
    "asyncpg",
    "python-jose",
    "passlib",
    "python-multipart",
]
[project.optional-dependencies]
test = [
    "pytest",
    "httpx"
]
lint = [
    "ruff",
]
